<resources>
    <string name="app_name">JKeePass</string>
    <string name="app_desc">100% Safe, Ad-Free and Secure. Password Management Application. </string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="welcomeBackMsg">JKeePass</string>


    <string name="credit">Credit: KeePass Password Safe (https://keepass.info/)</string>
    <string name="kdbxFile">kdbx File: </string>
    <string name="open">Open</string>
    <string name="importStr">Import</string>
    <string name="create">Create</string>
    <string name="creating">Creating</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterOldPassword">Enter Old Password</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="enterDatabaseName">Enter File/Database name</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>
    <string name="newText">New</string>
    <string name="menuText">Menu</string>
    <string name="getRandomPwd">New Random Password</string>
    <string name="addGroup">Add Group</string>
    <string name="addEntry">Add Entry</string>
    <string name="importComfirmText">Do you want to Import and store it for further use?</string>

    <string name="save">Save</string>

    <string name="processingFile">Please wait processing file.</string>
    <string name="permissionNotGranted">Permission Not Granted! Please Try again.</string>
    <string name="NotificationPermissionNotGranted">Notification Permission Not Granted!</string>
    <string name="emptyPasswordError">Password cannot be Empty.</string>
    <string name="emptyFileError">Please select kdbx File.</string>
    <string name="invalidFileError">Invalid kdbx File.</string>
    <string name="noDBError">Please check password. No database found in kdbx File.</string>
    <string name="databases">Databases:</string>

    <string name="unableToNavigateError">Unable to navigate.</string>
    <string name="groups">Groups</string>
    <string name="groupName">Group Name</string>
    <string name="groupNameDesc">\n It indicates Group Name.</string>

    <string name="enterGroupName">Enter Group Name</string>

    <string name="entryName">Entry Name</string>
    <string name="userName">User name</string>
    <string name="password">Password</string>
    <string name="newPassword">New Generated Password</string>
    <string name="entryTitle">Title</string>

    <string name="url">URL</string>

    <string name="loading">Loading ...</string>
    <string name="loadingWithPercentage">Loading ... ($per$%)</string>
    <string name="saving">Saving ...</string>
    <string name="savingWithPercentage">Saving ... ($per$%)</string>

    <string name="areYouSure">Are you sure?</string>

    <string name="notes">Notes</string>
    <string name="creationDate">Created Date</string>
    <string name="expiryDate">Expiry Date</string>

    <string name="groupNameEmptyErrorMsg">Group Name cannot be empty!</string>


    <string name="search">Search</string>
    <string name="enterToSearch">Type here to search ....</string>
    <string name="searching">Searching....</string>

    <string name="entryTitleEmptyErrorMsg">Title cannot be empty!</string>
    <string name="entryUsernameEmptyErrorMsg">Username cannot be empty!</string>
    <string name="entryPasswordEmptyErrorMsg">Password cannot be empty!</string>

    <string name="emptySearchKeyErrorMsg">Please enter some text to Search!</string>
    <string name="noEntriesSearchKeyErrorMsg">No entries found.</string>

    <string name="copiedToClipboard">Copied to clipboard!</string>

    <string name="devInProgress">Development yet to be done!</string>
    <string name="writePermissionNotGotError">Write permission not got!</string>

    <string name="themeModeInfoNotGotError">Unable to get mode info. Using light mode.</string>

    <string name="developer">Developer</string>
    <string name="developerName">Jayesh Ganatra</string>
    <string name="fullStack">Full stack developer</string>

    <string name="changeLogs">Change Logs: </string>
    <string name="changeLogsVer1Text">Version 1</string>
    <string name="changeLogsVer1ChangesText">   Initial build which opens simple kdbx KeePass database and Read(show) all groups and credentials in it.</string>
    <string name="changeLogsVer11Text">Version 1.1</string>
    <string name="changeLogsVer11ChangesText">   New font. Add group working.</string>
    <string name="changeLogsVer2Text">Version 2</string>
    <string name="changeLogsVer2ChangesText">   Edit and delete group working. Add, edit and delete Entry(credential) working.</string>
    <string name="changeLogsVer21Text">Version 2.1</string>
    <string name="changeLogsVer21ChangesText">   Minor fix. can view/open kdbx directly into app. Random password generator added.</string>
    <string name="changeLogsVer3Text">Version 3</string>
    <string name="changeLogsVer3ChangesText">   Can create new kdbx directly into app. added new animations.</string>
    <string name="changeLogsVer31Text">Version 3.1</string>
    <string name="changeLogsVer31ChangesText">   Dark mode bug fixes.</string>
    <string name="changeLogsVer4Text">Version 4.0</string>
    <string name="changeLogsVer4ChangesText">   Added experiment Dark mode support.</string>
    <string name="changeLogsVer5Text">Version 5.0</string>
    <string name="changeLogsVer5ChangesText">   Global search support added. Over all Design changes.</string>
    <string name="changeLogsVer51Text">Version 5.1</string>
    <string name="changeLogsVer51ChangesText">   Better dark mode support. Minor bug fixes.</string>
    <string name="changeLogsVer52Text">Version 5.2</string>
    <string name="changeLogsVer52ChangesText">   Added button to switch dark/light. Minor bug fixes.</string>
    <string name="changeLogsVer53Text">Version 5.3</string>
    <string name="changeLogsVer53ChangesText">   Bug fixes.</string>
    <string name="changeLogsVer60Text">Version 6.0</string>
    <string name="changeLogsVer60ChangesText">   Major UI change. Added Import and Export feature, Added additional field support.</string>
    <string name="changeLogsVer61Text">Version 6.1</string>
    <string name="changeLogsVer61ChangesText">   Bug fixes.</string>
    <string name="changeLogsVer62Text">Version 6.2</string>
    <string name="changeLogsVer62ChangesText">   UI Changes and Bug fixes.</string>
    <string name="changeLogsVer621Text">Version 6.2.1</string>
    <string name="changeLogsVer621ChangesText">   Minor fixes.</string>
    <string name="changeLogsVer63Text">Version 6.3</string>
    <string name="changeLogsVer63ChangesText">   Improvement in Dark mode, Colors added and Dark/Light mode stays even after app is closed.</string>
    <string name="changeLogsVer64Text">Version 6.4</string>
    <string name="changeLogsVer64ChangesText">   Rename of database added. Enhancement in setting and showing info on expiry date.</string>
    <string name="changeLogsVer641Text">Version 6.4.1</string>
    <string name="changeLogsVer641ChangesText">   Minor fixes.</string>
    <string name="changeLogsVer65Text">Version 6.5</string>
    <string name="changeLogsVer65ChangesText">   Change password added. UI update.</string>
    <string name="changeLogsVer651Text">Version 6.5.1</string>
    <string name="changeLogsVer651ChangesText">   Change password bug fix. Sorting of folder and entries added. Import added when opening file from outside of app.</string>
    <string name="changeLogsVer66Text">Version 6.6</string>
    <string name="changeLogsVer66ChangesText">   Added Statistic infos and Bug fixes.</string>
    <string name="changeLogsVer661Text">Version 6.6.1</string>
    <string name="changeLogsVer661ChangesText">   Minor UI fixes.</string>
    <string name="changeLogsVer67Text">Version 6.7</string>
    <string name="changeLogsVer67ChangesText">   Major UI changes.</string>
    <string name="changeLogsVer7Text">Version 7</string>
    <string name="changeLogsVer7ChangesText">   Fixes which supports Android 13+.</string>
    <string name="changeLogsVer71Text">Version 7.1</string>
    <string name="changeLogsVer71ChangesText">   Fixes which supports Android 13+.</string>
    <string name="changeLogsVer72Text">Version 7.2</string>
    <string name="changeLogsVer72ChangesText">   Fixes.</string>
    <string name="changeLogsVer73Text">Version 7.3</string>
    <string name="changeLogsVer73ChangesText">   Notification Fixes.</string>
    <string name="changeLogsVer731Text">Version 7.3.1</string>
    <string name="changeLogsVer731ChangesText">   Notification Fixes.</string>
    <string name="changeLogsVer8Text">Version 8</string>
    <string name="changeLogsVer8ChangesText">   Copy and move within same database/file feature added with UI enhancement.</string>
    <string name="changeLogsVer9Text">Version 9</string>
    <string name="changeLogsVer9ChangesText">   Layout changes and themes support added.</string>
    <string name="changeLogsVer91Text">Version 9.1</string>
    <string name="changeLogsVer91ChangesText">   Themes support added and performance improvement.</string>
    <string name="changeLogsVer10Text">Version 10</string>
    <string name="changeLogsVer10ChangesText">   New font, new themes and new default theme changes and bug fixes.</string>
    <string name="changeLogsVer10_5Text">Version 10.4</string>
    <string name="changeLogsVer10_5ChangesText">   New font, new themes and new default theme changes and bug fixes(notification and start bug).</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="enterFieldName">Enter Field Name</string>
    <string name="enterFieldValue">Enter Field Value</string>
    <string name="useDigit">Digit</string>
    <string name="useLowerCase">Lower Case</string>
    <string name="useUpperCase">Upper Case</string>
    <string name="useSymbol">Symbol</string>
    <string name="newPasswordAllFalse">All cannot be false! Please provide proper Input.</string>
    <string name="edit">Edit</string>
    <string name="changePassword">Change Password</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="entries">Entries</string>
    <string name="nothingHere">Nothing here .. !</string>
    <string name="importDatabase">Import or Create Database ...</string>
    <string name="importDeclaration">Please export and save database before uninstallation of application</string>

    <string name="themeCode">themeCode</string>
    <string name="themes">Themes</string>

    <string name="total">Total</string>
    <string name="expired">Expired</string>
    <string name="expiringSoon">Exp. soon</string>
    <string name="totalEntries">Total</string>
    <string name="expiredEntries">Expired</string>
    <string name="expiringSoonEntries">Exp. soon</string>
    <string name="entriesStatistics">Statistics (Entries)</string>
    <string name="statistics">Statistics</string>

    <string name="copy">Copy</string>
    <string name="copyMsg">Copied. Please navigate to destination and press <u>here</u> </string>
    <string name="move">Move</string>
    <string name="moveMsg">Please navigate to destination and press <u>here</u> </string>
    <string name="here"><u>here</u></string>
    <string name="somethingWentWrong">Something went wrong! please try again later.</string>
</resources>