<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/kp_card_view_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/kp_white"
        app:cardCornerRadius="@dimen/kp_card_view_radius">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/kp_margin"
                android:layout_marginRight="@dimen/kp_margin"
                android:layout_marginTop="@dimen/kp_info_margin_top"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/kp_card_view_margin"
                    android:layout_weight="1"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/me" />
                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/kp_card_view_margin"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:backgroundTint="@color/kp_light_blue"
                    android:text="@string/developer"
                    android:textColor="@color/kp_dark_blue">

                </com.google.android.material.button.MaterialButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/kp_card_view_margin"
                    android:layout_weight="1"
                    android:text="@string/developerName"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/kp_dark_blue"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/fullStack"
                    android:textColor="@color/kp_dark_blue"></TextView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/kp_margin"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_link_fill0_wght300_grad_25_opsz24"
                        app:tint="@color/kp_dark_blue">

                    </ImageButton>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/kp_margin"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_link_fill0_wght300_grad_25_opsz24"
                        app:tint="@color/kp_dark_blue">

                    </ImageButton>
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/kp_margin"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_link_fill0_wght300_grad_25_opsz24"
                        app:tint="@color/kp_dark_blue">

                    </ImageButton>
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/kp_margin"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_link_fill0_wght300_grad_25_opsz24"
                        app:tint="@color/kp_dark_blue">

                    </ImageButton>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/kp_card_view_margin"
                    android:autoLink="web"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/credit"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/kp_dark_blue"
                    android:textColorLink="@color/kp_dark_blue"
                    android:textStyle="italic">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/kp_card_view_margin"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/changeLogs"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/kp_dark_blue"
                    android:textColorLink="@color/kp_dark_blue">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/kp_card_view_margin"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/changeLogsVer1Text"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/kp_dark_blue"
                    android:textColorLink="@color/kp_dark_blue">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/kp_card_view_margin"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/changeLogsVer1ChangesText"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/kp_dark_blue"
                    android:textColorLink="@color/kp_dark_blue">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/kp_card_view_margin"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/kp_dark_blue"
                    android:textColorLink="@color/kp_dark_blue">
                </TextView>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatCloseInfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:fabSize="mini"
        android:layout_marginEnd="0pt"
        android:backgroundTint="@color/kp_light_blue"
        app:tint="@color/kp_dark_blue"
        app:srcCompat="@drawable/ic_close_fill0_wght300_grad_25_opsz24" />
</LinearLayout>